# naturf

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  DISCLAIMER  Dockerfile  LICENSE  MANIFEST.in  README.md  authors.html  authors.rst  conf.py  contributing.html  contributing.rst  daymet_v3_tmax_annavg_1999_hi.nc4  footer.html  genindex.html  getting_started.html  hamilton_run.py  how_to_cite.html  index.html  intro-hamilton.ipynb  intro.ipynb  license.html  modules.html  modules.rst  naturf.html  naturf.rst  objects.inv  publications.html  py-modindex.html  pyproject.toml  quickstarter.html  release_notes.html  requirements.txt  ruff.toml  run.py  search.html  searchindex.js  (+2 more)
.github/workflows/: build.yml  create-paper-pdf.yml  deploy.yml  publish-to-pypi.yml
NATURF/: 1_no_raster_temp_chicago_UTM.py  2_height_to_width_3_buildfrac_chicago.py  3_frontal_area_density_8_chicago2.py  4_no_raster_temp_chicago_UTM_with_paras2.py  Binary.py  Building_IDs_Generator.py  Buildings_Raster.py  Buildings_Raster_Generator.py  Extractor.py  Final_Outputs.py  LICENSE  Master_Script.py  Master_Script.sh  Parameter_Calculations.py  Parameter_Definitions.py  WRF_Calculations.py  config.py  im3Workflow.py  model.py  utils.py
NATURF/tests/: 00065-00096.00065-00096  C-5.csv  compare_dc_output.py  index
_modules/: index.html
_modules/naturf/: config.html  driver.html  model.html  nodes.html  output.html  utils.html
_sources/: authors.rst.txt  contributing.rst.txt  getting_started.rst.txt  how_to_cite.rst.txt  index.rst.txt  license.rst.txt  naturf.rst.txt  quickstarter.rst.txt  release_notes.rst.txt  user_guide.rst.txt
_static/: documentation_options.js
docs/source/: authors.rst  conf.py  contributing.rst  footer.rst  getting_started.rst  how_to_cite.rst  index.rst  outputs.yml  publications.rst  quickstarter.rst  release_notes.rst  user_guide.rst
example/: DC_Indices.csv
example/shapefile/: C-5.dbf  C-5.sbn  C-5.sbx
naturf/: __init__.py  config.py  driver.py  nodes.py  output.py  params.py  utils.py
naturf/data/: C-5.shp  C-5.shx
naturf/tests/: test_config.py  test_nodes.py  test_utils.py
notebooks/: Digraph.gv  naturf_quickstarter.ipynb  quickstarter.ipynb
notebooks/.ipynb_checkpoints/: naturf_quickstarter-checkpoint.ipynb
paper/: paper.bib  paper.md
scripts/: Binary.py  Building_IDs.py  Parameter_Calculations.py  Parameter_Definitions.py  im3Workflow.py
tests/: test_config.py  test_driver.py  test_nodes.py  test_output.py
