[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "naturf"
version = "1.0.2"
description = 'The Neighborhood Adaptive Tissues for Urban Resilience Futures tool (NATURF) is a Python workflow that generates data readable by the Weather Research and Forecasting (WRF) model. The NATURF Python modules use shapefiles containing building footprint and height data as input to calculate 132 building parameters at any resolution and converts the parameters into a binary file format.'
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "Em Rexer", email = "emily.rexer@pnnl.gov" },
  { name="Levi Sweet-Breu", email="levi_sweetbreu1@baylor.edu" },
  { name="Melissa Allen-Dumas", email="allenmr@ornl.gov" },
  { name="Chris Vernon", email="chris.vernon@pnnl.gov" },
]

classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

]

dependencies = [
  "fiona>=1.8.19",
  "geocube>=0.3.1",
  "geopandas>=0.10.2",
  "joblib>=1.0.1",
  "numpy>=1.22.4",
  "pandas>=1.4.2",
  "pyproj>=3.0.1",
  "rasterio>=1.2.10",
  "rtree>=1.0.0",
  "sf-hamilton[visualization]>=1.45",
  "shapely>=1.8.2, <2",
  "tqdm>=4.66.1",
  "xarray>=2022.3.0",
]

[project.optional-dependencies]
docs = [
  "Sphinx<=7.2.6",
  "nbsphinx>=0.9.3",
  "sphinx-rtd-theme>=2.0.0",
  "sphinxcontrib-applehelp>=1.0.8",
  "sphinxcontrib-devhelp>=1.0.6",
  "sphinxcontrib-htmlhelp>=2.0.5",
  "sphinxcontrib-jquery>=4.1",
  "sphinxcontrib-jsmath>=1.0.1",
  "sphinxcontrib-qthelp>=1.0.7",
  "sphinxcontrib-serializinghtml>=1.1.10",
  "sphinx_design>=0.5.0",
  "sphinxcontrib.katex>=0.9.9",
]

[project.urls]
Homepage = "https://immm-sfa.github.io/naturf/index.html"
Repository = "https://github.com/IMMM-SFA/naturf"
Issues = "https://github.com/IMMM-SFA/naturf/issues"
